Настроена сборка проекта на Java 11 и исправлены тесты