@@ -1,5 +1,6 @@
 package com.example;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class Alex extends Lion {
@@ -8,16 +9,16 @@ public class Alex extends Lion {
         super("Самец", feline);
     }
 
-    @Override
-    public int getKittens() {
-        return 0;
-    }
-
     public List<String> getFriends() {
-        return List.of("Марти", "Глория", "Мелман");
+        return Arrays.asList("Марти", "Глория", "Мелман");
     }
 
     public String getPlaceOfLiving() {
         return "Нью-Йоркский зоопарк";
+    }
+
+    @Override
+    public int getKittens() {
+        return 0;
     }
 }
